--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,25 @@
 h1 {
-  font-family: 'Quicksand';
-  src: local('Quicksand'), url(./fonts/Quicksand-Bold.ttf) format('tff');
+  font-family: 'Raleway';
+  src: local('Raleway'), url(./fonts/Raleway-Medium.ttf) format('ttf');
   font-weight: bolder;
   font-size: larger;
   text-shadow: 2px 2px #81D8C4;
 }
 
-p {
+h4 {
+  /* font-family: 'Quicksand';
+  src: local('Quicksand'), url(./fonts/Quicksand-Medium.ttf) format('tff'); */
   font-family: 'Raleway';
   src: local('Raleway'), url(./fonts/Raleway-Medium.ttf) format('ttf');
+}
+
+p {
+  font-family: 'Quicksand';
+  src: local('Quicksand'), url(./fonts/Quicksand-Bold.ttf) format('tff');
   text-align: center;
 }
 
-h4 {
-  font-family: 'Quicksand';
-  src: local('Quicksand'), url(./fonts/Quicksand-Medium.ttf) format('tff');
-}
+
 
 nav {
   font-family: 'Quicksand';
